--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://192.168.0.158:1433; databaseName=Hahaha
+spring.datasource.username=sa
+spring.datasource.password=690066
+mybatis.mapper-locations=classpath:mapper/*.xml
