--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
             <version>5.0.0-HBase-2.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.7.7</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>2.0.0</version>
